<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/ten_dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <View
        android:layout_width="80dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:background="#EEE"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tt_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/twenty_dp"
        android:layout_marginTop="@dimen/twenty_dp"
        android:layout_marginRight="@dimen/twenty_dp"
        android:hint="@string/first_name"
        android:textColorHint="@color/light_black"
        app:boxStrokeColor="@color/purple_500"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/black"
        android:animateLayoutChanges="true"
        app:startIconDrawable="@drawable/ic_user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:imeOptions="actionNext"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tt_last_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/twenty_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginRight="@dimen/twenty_dp"
        android:hint="@string/last_name"
        android:textColorHint="@color/light_black"
        app:boxStrokeColor="@color/purple_500"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/black"
        android:animateLayoutChanges="true"
        app:startIconDrawable="@drawable/ic_user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:imeOptions="actionNext"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tt_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/twenty_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginRight="@dimen/twenty_dp"
        android:hint="@string/email"
        android:textColorHint="@color/light_black"
        app:boxStrokeColor="@color/purple_500"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/black"
        android:animateLayoutChanges="true"
        app:startIconDrawable="@drawable/ic_user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:imeOptions="actionNext"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/twenty_dp"
        android:weightSum="10"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_weight="4.5"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@drawable/btn_state"
            android:padding="@dimen/ten_dp"
            android:gravity="center"
            android:id="@+id/tv_save"
            android:layout_marginRight="@dimen/ten_dp"
            android:textColor="@color/white"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_weight="4.5"
            android:id="@+id/tv_cancel"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/btn_state"
            android:padding="@dimen/ten_dp"
            android:gravity="center"
            android:textColor="@color/white"/>
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>