<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatTextView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:text="FreeLancing"
        android:scaleType="fitXY"
        android:src="@drawable/freelancer"
        android:textColor="@color/purple_200"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/linearLayoutCompat2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sixteen_dp"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:layout_marginEnd="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:orientation="vertical"
        app:cardCornerRadius="@dimen/ten_dp"
        app:cardElevation="@dimen/ten_dp"
        app:cardMaxElevation="@dimen/ten_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
        app:layout_constraintVertical_bias="0.32999998">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="295dp"
            android:orientation="vertical"
            android:padding="@dimen/ten_dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ten_dp"
                android:padding="@dimen/ten_dp"
                android:text="Welcome"
                android:textColor="@color/purple_200"
                android:textSize="@dimen/sixteen_dp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tt_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/twenty_dp"
                android:layout_marginTop="@dimen/twenty_dp"
                android:layout_marginRight="@dimen/twenty_dp"
                android:animateLayoutChanges="true"
                android:hint="@string/user_name"
                android:textColorHint="@color/light_black"
                app:boxStrokeColor="@color/purple_500"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_user">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tt_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/twenty_dp"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_marginRight="@dimen/twenty_dp"
                android:animateLayoutChanges="true"
                android:hint="@string/password"
                android:textColorHint="@color/light_black"
                app:boxStrokeColor="@color/purple_500"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_unlock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/twenty_dp"
                android:layout_marginTop="@dimen/twenty_dp"
                android:layout_marginRight="@dimen/twenty_dp"
                android:layout_marginBottom="@dimen/twenty_dp"
                android:background="@drawable/btn_state"
                android:elevation="@dimen/ten_dp"
                android:gravity="center"
                android:padding="@dimen/eight_dp"
                android:shadowColor="@color/light_black"
                android:text="@string/sign_in"
                android:textColor="@color/white" />


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>